fix dropdown visible on navbar + add bg-color

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,5 +4,5 @@
 
 body {
 	color: #364753;
-	/* background-color: #f6f7ff; */
+	background-color: #f6f7ff;
 }
